Fix CCT CTA button alignment

--- a/Extensions/Workspace/SDWebsiteCCTs/Modules/CTABlockCCT/Sass/_ctablockcct.scss
+++ b/Extensions/Workspace/SDWebsiteCCTs/Modules/CTABlockCCT/Sass/_ctablockcct.scss
@@ -109,6 +109,9 @@ $sc-font-charter: 'Charter', serif !default;
     padding: 15px 40px;
     text-decoration: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &.cms-cct-cta-block-cta-btn-large {
         min-width: 325px;
